--- a/automatas_lenguajes_Edward_Laiton.html
+++ b/automatas_lenguajes_Edward_Laiton.html
@@ -7,8 +7,8 @@
 </head>
 <body>
    
-    <embed src="pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
-    <h1>Unad</h1>
+    <embed src="../Automatas_Lenguajes/pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
+    
 
 </body>
 </html>
