--- a/automatas_lenguajes_Edward_Laiton.html
+++ b/automatas_lenguajes_Edward_Laiton.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    
-    <embed src="/pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
+    <embed src="pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
     
 
 </body>
