--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
    
-    <embed src="pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXo4PFIk7nK5pIqm9B77wf2mk7XZ7R-APleQ&usqp=CAU" alt="error">
+    <embed src="/pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
+    <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXo4PFIk7nK5pIqm9B77wf2mk7XZ7R-APleQ&usqp=CAU" alt="error"> -->
     
 </body>
 </html>
