--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
    
-    <embed src="Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="850px" />
-    <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSXo4PFIk7nK5pIqm9B77wf2mk7XZ7R-APleQ&usqp=CAU" alt="error"> -->
+    <embed src="Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="900" />
+    <img src="img/0ec0a57910ac4d59925a9c0795c6fd27.png" alt="error">
     
 </body>
 </html>
