--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    
-    <embed src="Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="900" />
+    <embed src="pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="900" />
     <img src="img/0ec0a57910ac4d59925a9c0795c6fd27.png" alt="error">
     
 </body>
