--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
    
     <embed src="pdf/Autómatas y lenguajes formales (1).pdf" type="application/pdf" width="100%" height="900" />
-    <img src="img/0ec0a57910ac4d59925a9c0795c6fd27.png" alt="error">
+    <!-- <img src="img/0ec0a57910ac4d59925a9c0795c6fd27.png" alt="error"> -->
     
 </body>
 </html>
