--- a/conceptos.html
+++ b/conceptos.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automatas y Lenguajes Edward Laiton</title>
+    <title>Conceptos</title>
 </head>
-
 <body>
     <div>
         <h1 style="text-align: center;">AUTOMATAS Y LENGUAJES FORMALES</h1>
         <div>
-            <a href="conceptos.html"><h2>Enlace a Ampliación de Conceptos</h2></a>
+            <a href="index.html"><h2>Enlace a Pagina Principal</h2></a>
         </div>
         <h5>By Edward Laiton</h5>
-        <embed src="pdf/Autómatas y lenguajes formales.pdf" type="application/pdf" width="100%" height="900" />
+        <embed src="pdf/Lenguajes y Expresiones Regulares.pdf" type="application/pdf" width="100%" height="900" />
     </div>
 </body>
-
 </html>
